--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="logo">
-          <img src="favicon_io/logotransp.png" alt="Logo" width="150" />
-        </div>
+        <div class="container">
+            <div class="logo">
+                <img src="favicon_io/logotransp.png" alt="CPCE Logo" class="header-logo">
+            </div>
         <nav>
           <ul>
             <li><a href="#">Inicio</a></li>
