--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>Nuestros cursos están diseñados e impartidos por expertos en la materia, garantizando un aprendizaje de alto nivel.</p>
                 </div>
                 <div class="info-item">
-                    <img src="img/icono_actualizacion1.png" alt="Icono Actualización" class="info-icon">
+                    <img src="img/icono_actualizacion.jpg" alt="Icono Actualización" class="info-icon">
                     <h3>Actualización Constante</h3>
                     <p>Nos mantenemos al día con las últimas tendencias y tecnologías, para que siempre estés a la vanguardia.</p>
                 </div>
