--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compendio de Cursos de IA</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="favicon_io/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="favicon_io/favicon-16x16.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
-    
     />
   </head>
   <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="favicon_io/logotransp.png" alt="CPCE Logo" class="header-logo">
-            </div>
+      <div class="container">
+        <div class="logo">
+          <img
+            src="favicon_io/logotransp.png"
+            alt="CPCE Logo"
+            class="header-logo"
+          />
+        </div>
         <nav>
           <ul>
             <li><a href="/index.html">Inicio</a></li>
@@ -33,75 +36,173 @@
 
         <div class="curso-container">
           <div class="curso">
-            <h2>Curso 1: Introducción a la IA</h2>
+            <img
+              src="img/IAenContabilidad-Innovación y Futuro.jpg"
+              alt="Imagen Curso Introducción a la IA"
+              class="curso-imagen"
+            />
+            <h2>IA en Contabilidad: Innovación y Futuro</h2>
+            <p>Aplicaciones de la IA en Contabilidad:</p>
+
             <p>
-              Descripción breve del curso. Lorem ipsum dolor sit amet,
-              consectetur adipiscing elit...
+              Automatización de Tareas: Software de IA maneja tareas rutinarias
+              como la entrada de datos y la reconciliación de cuentas.
             </p>
-            <div class="video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/TU_VIDEO_ID"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
-            <button class="btn">Más Información</button>
+
+            <p>
+              Análisis Predictivo: Utiliza grandes volúmenes de datos para
+              predecir tendencias financieras y apoyar la toma de decisiones.
+            </p>
+
+            <p>
+              Auditorías Inteligentes: Detecta anomalías y fraudes más
+              eficientemente que los métodos tradicionales.
+            </p>
+            <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+            <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
+            <a
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=465"
+              class="btn"
+              >Más Información</a
+            >
           </div>
 
           <div class="curso">
-            <h2>Curso 2: Machine Learning Avanzado</h2>
-            <p>Descripción breve del curso. Otra descripción ...</p>
-            <div class="video-container">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/OTRO_VIDEO_ID"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
-            <button class="btn">Más Información</button>
+            <img
+              src="img/Impacto de la IA en la estrategia empresarial.jpg"
+              alt="Imagen Curso Machine Learning Avanzado"
+              class="curso-imagen"
+            />
+            <h2>Impacto de la IA en la estrategia empresarial</h2>
+            <p>
+              Descubre cómo la inteligencia artificial redefine el juego en un
+              mundo empresarial en transformación
+            </p>
+            <p><strong>Docente:</strong> Raymond Schefer</p>
+            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+            <a
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+              class="btn"
+              >Más Información</a
+            >
+          </div>
+
+          <div class="curso">
+            <img
+              src="img/Optimización Contable con INTELIGENCIA.png"
+              alt="Imagen Curso Machine Learning Avanzado"
+              class="curso-imagen"
+            />
+            <h2>
+              Optimización Contable con INTELIGENCIA ARTIFICIAL: Transformando
+              la Contabilidad con Machine Learning y Modelos LLM
+            </h2>
+            <p>
+              Este taller se centra en cómo los avances en inteligencia
+              artificial, específicamente el Machine Learning y los Modelos de
+              Lenguaje de Gran Tamaño (LLM), están revolucionando el campo de la
+              contabilidad. Los participantes aprenderán cómo estas tecnologías
+              pueden ser aplicadas para mejorar la precisión, eficiencia y
+              análisis en sus prácticas contables.
+            </p>
+            <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
+            <p><strong>Fecha:</strong> 15 de Agosto de 2024</p>
+            <a
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=482"
+              class="btn"
+              >Más Información</a
+            >
+          </div>
+
+          <div class="curso">
+            <img
+              src="img/Impacto de la IA en la estrategia empresarial.jpg"
+              alt="Imagen Curso Machine Learning Avanzado"
+              class="curso-imagen"
+            />
+            <h2>Impacto de la IA en la estrategia empresarial</h2>
+            <p>
+              Descubre cómo la inteligencia artificial redefine el juego en un
+              mundo empresarial en transformación
+            </p>
+            <p><strong>Docente:</strong> Raymond Schefer</p>
+            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+            <a
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+              class="btn"
+              >Más Información</a
+            >
+          </div>
+
+          <div class="curso">
+            <img
+              src="img/Impacto de la IA en la estrategia empresarial.jpg"
+              alt="Imagen Curso Machine Learning Avanzado"
+              class="curso-imagen"
+            />
+            <h2>Impacto de la IA en la estrategia empresarial</h2>
+            <p>
+              Descubre cómo la inteligencia artificial redefine el juego en un
+              mundo empresarial en transformación
+            </p>
+            <p><strong>Docente:</strong> Raymond Schefer</p>
+            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+            <a
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+              class="btn"
+              >Más Información</a
+            >
           </div>
         </div>
       </section>
     </main>
-
-    
-
   </body>
   <footer>
     <div class="container">
-        <div class="footer-content">
-            <div class="footer-info">
-                <p><b>Consejo Profesional de Ciencias Económicas</b></p>
-                <p>Av. España 560, Ciudad de Mendoza<br>Provincia de Mendoza, Argentina</p>
-                <p>+54 (0261) 4340055 | 4205014 | 4204515</p>
-            </div>
-            <div class="footer-social">
-                <a href="https://www.facebook.com/CPCEMZA" target="_blank" rel="noopener noreferrer">
-                    <img src="img/icon_fb.png" alt="Facebook" class="footer-icon">
-                </a>
-                <a href="https://www.instagram.com/cpcemendoza" target="_blank" rel="noopener noreferrer">
-                  <img src="img/icon_in.png" alt="Instagram" class="footer-icon">
-                </a>
-                <a href="https://twitter.com/cpcemza" target="_blank" rel="noopener noreferrer">
-                  <img src="img/icon_tw.png" alt="Twitter" class="footer-icon">
-                </a>
-                <a href="https://www.linkedin.com/in/consejo-profesional-de-ciencias-econ%C3%B3micas-mendoza-b15020175" target="_blank" rel="noopener noreferrer">
-                  <img src="img/icon_li.png" alt="Linkedin" class="footer-icon">
-                </a>
-            </div>
-
-            <div class="footer-logo">
-               <img src="img/logofooter.png" alt="CPCE" class="logofooter">
-            </div>
+      <div class="footer-content">
+        <div class="footer-info">
+          <p><b>Consejo Profesional de Ciencias Económicas</b></p>
+          <p>
+            Av. España 560, Ciudad de Mendoza<br />Provincia de Mendoza,
+            Argentina
+          </p>
+          <p>+54 (0261) 4340055 | 4205014 | 4204515</p>
         </div>
+        <div class="footer-social">
+          <a
+            href="https://www.facebook.com/CPCEMZA"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="img/icon_fb.png" alt="Facebook" class="footer-icon" />
+          </a>
+          <a
+            href="https://www.instagram.com/cpcemendoza"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="img/icon_in.png" alt="Instagram" class="footer-icon" />
+          </a>
+          <a
+            href="https://twitter.com/cpcemza"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="img/icon_tw.png" alt="Twitter" class="footer-icon" />
+          </a>
+          <a
+            href="https://www.linkedin.com/in/consejo-profesional-de-ciencias-econ%C3%B3micas-mendoza-b15020175"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="img/icon_li.png" alt="Linkedin" class="footer-icon" />
+          </a>
+        </div>
+
+        <div class="footer-logo">
+          <img src="img/logofooter.png" alt="CPCE" class="logofooter" />
+        </div>
+      </div>
     </div>
-</footer>
+  </footer>
 </html>
