--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
         <nav>
           <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/capacitaciones.html">Capacitaciones</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="capacitaciones.html">Capacitaciones</a></li>
           </ul>
         </nav>
       </div>
