--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compendio de Cursos de IA</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylescap.css" />
     <link rel="icon" href="favicon_io/favicon-16x16.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
