--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             <img src="img/IA_bienvenida.png" alt="Imagen de bienvenida" class="hero-image">
             <div> </div>
-            <div><a href="/capacitaciones.html" class="btn">Ver Capacitaciones</a></div>
+            <div><a href="capacitaciones.html" class="btn">Ver Capacitaciones</a></div>
             
         </section>
 
