modo oscuro e iconos

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -191,7 +191,7 @@
             <img src="img/icon_tw.png" alt="Twitter" class="footer-icon" />
           </a>
           <a
-            href="https://www.linkedin.com/in/consejo-profesional-de-ciencias-econ%C3%B3micas-mendoza-b15020175"
+            href="https://www.linkedin.com/company/cpce-mendoza/?viewAsMember=true"
             target="_blank"
             rel="noopener noreferrer"
           >
