--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
+        <div class="container">  <div class="logo">
                 <img src="favicon_io/logotransp.png" alt="CPCE Logo" class="header-logo">
             </div>
             <nav>
@@ -28,15 +27,14 @@
         </div>
     </header>
 
-    <main class="container">
-        <section class="hero">
+    <section class="hero">  <div class="hero-content container">  
             <h1>Bienvenido al Portal de Capacitaciones</h1>
             <p>En el Consejo Profesional de Ciencias Económicas de Mendoza, nos comprometemos a ofrecerte una formación continua y de vanguardia. Explora nuestras capacitaciones en Inteligencia Artificial y otras áreas relevantes para tu desarrollo profesional.</p>
             <a href="capacitaciones.html" class="btn">Ver Capacitaciones</a>
-            <img src="img/IA_bienvenida.png" alt="Imagen de bienvenida" class="hero-image">
-        </section>
+        </div>
+    </section>
 
-        <section class="info">
+    <main class="container">  <section class="info">
             <h2>¿Por qué Capacitarse con Nosotros?</h2>
             <div class="info-grid">
                 <article class="info-item">
@@ -65,8 +63,7 @@
         </section>
     </main>
 
-    <footer>
-      <div class="container">
+    <footer>  <div class="container">
             <div class="footer-content">
                 <div class="footer-info">
                     <p><b>Consejo Profesional de Ciencias Económicas</b></p>
