--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
                     <li><a href="capacitaciones.html">Capacitaciones</a></li>
                 </ul>
             </nav>
-            <div class="dark-mode-toggle">
-                <button id="darkModeToggle">
-                    <span id="toggleIcon">&#x1F319;</span>
-                </button>
+            <div class="dark-mode-toggle" id="darkModeToggle">
+              <input type="checkbox" class="checkbox" id="toggleCheckbox" />
+              <label for="toggleCheckbox" class="slider"></label>
             </div>
         </div>
     </header>
