--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                 </div>
 
                 <div class="footer-logo">
-                    <img src="img/logofooter.png" alt="CPCE" class="logofooter">
+                    <picture>
+                        <img src="img/logofooter.png" data-light="img/logofooter.png" data-dark="img/logofooter-blanco.png" alt="Logo consejo" class="footerlogo">
+                    </picture>
                 </div>
             </div>
         </div>
