arreglo de imagenes footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="footer-logo">
                     <picture>
-                        <img src="img/logofooter.png" data-light="img/logofooter.png" data-dark="img/logofooter-blanco.png" alt="Logo consejo" class="footerlogo">
+                        <img src="img/logofooter.png" data-light="img/logofooter.png" data-dark="img/logofooterblanco.png" alt="Logo consejo" class="footerlogo">
                     </picture>
                 </div>
             </div>
