mejora de movimiento carrusel index

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -46,21 +46,8 @@
               class=" curso-imagen-container"
             />
             <h2>IA en Contabilidad: Innovación y Futuro</h2>
-            <p>Aplicaciones de la IA en Contabilidad:</p>
-
             <p>
-              Automatización de Tareas: Software de IA maneja tareas rutinarias
-              como la entrada de datos y la reconciliación de cuentas.
-            </p>
-
-            <p>
-              Análisis Predictivo: Utiliza grandes volúmenes de datos para
-              predecir tendencias financieras y apoyar la toma de decisiones.
-            </p>
-
-            <p>
-              Auditorías Inteligentes: Detecta anomalías y fraudes más
-              eficientemente que los métodos tradicionales.
+              La Inteligencia Artificial está transformando radicalmente la contabilidad. Este curso te introduce a las herramientas y conceptos clave que te permitirán automatizar tareas, realizar análisis predictivos y detectar fraudes con una eficiencia sin precedentes. Descubre cómo la IA te liberará de lo rutinario para que te enfoques en el análisis estratégico y te conviertas en un contador del futuro.
             </p>
             <p><strong>Docente:</strong> Cdora. Tania Damiani</p>
             <p><strong>Fecha:</strong> 27 de Junio de 2024</p>
@@ -74,7 +61,7 @@
           <div class="curso">
             <img
               src="img/Impacto de la IA en la estrategia empresarial.jpg"
-              alt="Imagen Curso Machine Learning Avanzado"
+              alt="Imagen Impacto de la IA"
               class=" curso-imagen-container"
             />
             <h2>Impacto de la IA en la estrategia empresarial</h2>
@@ -94,7 +81,7 @@
           <div class="curso">
             <img
               src="img/Optimización Contable con INTELIGENCIA.png"
-              alt="Imagen Curso Machine Learning Avanzado"
+              alt="Imagen Optimización Contable con INTELIGENCIA"
               class=" curso-imagen-container"
             />
             <h2>
@@ -120,19 +107,18 @@
 
           <div class="curso">
             <img
-              src="img/Impacto de la IA en la estrategia empresarial.jpg"
-              alt="Imagen Curso Machine Learning Avanzado"
+              src="img/Taller de inteligencia artificial enfocado en análisis de datos para contadores.jpg"
+              alt="Imagen inteligencia artificial enfocado en análisis de datos"
               class=" curso-imagen-container"
             />
-            <h2>Impacto de la IA en la estrategia empresarial</h2>
+            <h2>Taller de inteligencia artificial enfocado en análisis de datos para contadores</h2>
             <p>
-              Descubre cómo la inteligencia artificial redefine el juego en un
-              mundo empresarial en transformación
+              Transforma tu práctica contable con Inteligencia Artificial: Domina el análisis de datos, automatiza procesos y toma decisiones estratégicas basadas en Machine Learning.
             </p>
-            <p><strong>Docente:</strong> Raymond Schefer</p>
-            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+            <p><strong>Docente:</strong> Tania Damiani</p>
+            <p><strong>Fecha:</strong> 20 de Septiembre de 2024</p>
             <a
-              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
+              href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=494"
               class="btn"
               >Más Información</a
             >
@@ -140,17 +126,16 @@
 
           <div class="curso">
             <img
-              src="img/Impacto de la IA en la estrategia empresarial.jpg"
-              alt="Imagen Curso Machine Learning Avanzado"
+              src="img/Taller de automatización con Inteligencia Artificial Aplicada al Área Contable.jpg"
+              alt="Imagen automatización con Inteligencia Artificial"
               class=" curso-imagen-container"
             />
-            <h2>Impacto de la IA en la estrategia empresarial</h2>
+            <h2>Taller de automatización con Inteligencia Artificial Aplicada al Área Contable</h2>
             <p>
-              Descubre cómo la inteligencia artificial redefine el juego en un
-              mundo empresarial en transformación
+              Revoluciona tu práctica contable con la Inteligencia Artificial. Este curso intensivo te guiará desde los fundamentos hasta la implementación práctica de herramientas de IA como GPTs personalizados y Copilot en hojas de cálculo. Automatiza tareas, obtén análisis predictivos más precisos, y descubre cómo la IA está redefiniendo el futuro de la contabilidad. Prepárate para liderar la transformación digital en tu campo.
             </p>
-            <p><strong>Docente:</strong> Raymond Schefer</p>
-            <p><strong>Fecha:</strong> 07 de Agosto de 2024</p>
+            <p><strong>Docente:</strong> Tania Damiani</p>
+            <p><strong>Fecha:</strong> 06 de Diciembre de 2024</p>
             <a
               href="https://micuenta.cpcemza.org.ar/capacitacion_.php?ID=479"
               class="btn"
