--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
 
     <section class="hero">
         <div class="hero-content container">
-            <h1>Bienvenido al Portal de Capacitaciones</h1>
-            <p>En el Consejo Profesional de Ciencias Económicas de Mendoza, nos comprometemos a ofrecerte una formación continua y de vanguardia. Explora nuestras capacitaciones en Inteligencia Artificial y otras áreas relevantes para tu desarrollo profesional.</p>
+            <h1>Capacitate en Inteligencia Artificial: llevá tu carrera al siguiente nivel</h1>
+            <p>El futuro es ahora, y en el CPCE Mendoza te damos las herramientas para aprovecharlo. Accedé a capacitaciones exclusivas en Inteligencia Artificial.  ¡Explorá, aprendé y marcá la diferencia!</p>
             <a href="capacitaciones.html" class="btn">Ver Capacitaciones</a>
+        </div>
+        <div class="hero-carousel" id="heroCarousel">
+            <img src="img/IA_bienvenida.png" alt="Imagen 1" class="hero-image">
+            <img src="img/AI-1.webp" alt="Imagen 2" class="hero-image">
+            <img src="img/inteligencia-artificial-contaduria-publica.webp" alt="Imagen 3" class="hero-image">
+            <img src="img/Inteligencia-artificial-contabilidad-finanzas-impuestos-1000x595.jpeg" alt="Imagen 4" class="hero-image">
+            <img src="img/inteligencia-artificial-contabilidad.jpg" alt="Imagen 5" class="hero-image">
+    
         </div>
     </section>
 
