mejoras imagenes carrusel

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <a href="capacitaciones.html" class="btn">Ver Capacitaciones</a>
         </div>
         <div class="hero-carousel" id="heroCarousel">
-            <img src="img/IA_bienvenida.png" alt="Imagen 1" class="hero-image">
+            <img src="img/IA_bienvenida.webp" alt="Imagen 1" class="hero-image">
             <img src="img/AI-1.webp" alt="Imagen 2" class="hero-image">
             <img src="img/inteligencia-artificial-contaduria-publica.webp" alt="Imagen 3" class="hero-image">
-            <img src="img/Inteligencia-artificial-contabilidad-finanzas-impuestos-1000x595.jpeg" alt="Imagen 4" class="hero-image">
-            <img src="img/inteligencia-artificial-contabilidad.jpg" alt="Imagen 5" class="hero-image">
+            <img src="img/Inteligencia-artificial-contabilidad-finanzas-impuestos-1000x595.webp" alt="Imagen 4" class="hero-image">
+            <img src="img/inteligencia-artificial-contabilidad.webp" alt="Imagen 5" class="hero-image">
     
         </div>
     </section>
