botones a la derecha

--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -42,6 +42,7 @@
 
 
 
+
   <div class="curso">
     <div class="curso-cabecera">
       <img
@@ -115,8 +116,7 @@
         class="curso-imagen-container"
       />
       <h2>
-        Optimización Contable con INTELIGENCIA ARTIFICIAL: Transformando
-        la Contabilidad con Machine Learning y Modelos LLM
+        Optimización Contable con Inteligencia Artificial
       </h2>
     </div>
     <div class="curso-detalles">
