cambio de titulos

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
     <section class="hero">
         <div class="hero-content container">
-            <h1>Capacitate en Inteligencia Artificial: llevá tu carrera al siguiente nivel</h1>
-            <p>El futuro es ahora, y en el CPCE Mendoza te damos las herramientas para aprovecharlo. Accedé a capacitaciones exclusivas en Inteligencia Artificial.  ¡Explorá, aprendé y marcá la diferencia!</p>
+            <h1>Entorno Ai: Liderando Nuestro Futuro Profesional.</h1>
+            <p>El futuro es ahora, y nuestro CPCE Mendoza te da las herramientas para aprovecharlo.<br>
+              Accedé a capacitaciones exclusivas en Inteligencia Artificial.<br>
+              ¡Explorá, aprendé y marcá la diferencia!</p>
             <a href="capacitaciones.html" class="btn">Ver Capacitaciones</a>
         </div>
         <div class="hero-carousel" id="heroCarousel">
@@ -52,7 +54,7 @@
 
     <main class="container">
         <section class="info">
-            <h2>¿Por qué Capacitarse con Nosotros?</h2>
+            <h2>¿Por qué capacitarte en Ai con nosotros?</h2>
             <div class="info-grid">
                 <article class="info-item">
                     <picture>
