--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <section class="contacto-rapido">
             <h2>Contacto Rápido</h2>
             <p>¿Tienes preguntas? Contáctanos:</p>
-            <p>Teléfono: +54 (0261) 4340055 | 4205014 | 4204515</p>
+            <p>Teléfono: +54 261 5988965</p>
+            <p>Sumate al grupo de Whatsapp: <a href="https://docs.google.com/forms/d/e/1FAIpQLSdG5WFtSGuL46oDscuCKxc8O7x0qQ-52e_TYk--hwoYvt9X8w/viewform">Aquí</a></p>
             <p>Contacto: <a href="https://cpcemza.org.ar/contacto.php">Formulario de contacto</a></p>
         </section>
     </main>
@@ -94,7 +95,7 @@
                 <div class="footer-info">
                     <p><b>Consejo Profesional de Ciencias Económicas</b></p>
                     <p>Av. España 560, Ciudad de Mendoza<br>Provincia de Mendoza, Argentina</p>
-                    <p>+54 (0261) 4340055 | 4205014 | 4204515</p>
+           
                 </div>
                 <div class="footer-social">
                     <a href="https://www.facebook.com/CPCEMZA" target="_blank" rel="noopener noreferrer">
